--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
+                    <h2 class="section-heading text-uppercase">HISTORY</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <ul class="timeline">
@@ -199,40 +199,50 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4>2011</h4>
+                                <h4 class="subheading">Akte Notaris</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Al-Hanif dikukuhkan dalam akte notaris Octora Puspitasari, SH, M.KN, No.01 Tanggal 14 Maret 2011. Pada awal pendiriannya, Al-Hanif selama 1 tahun, nyaris (red:hampir saja) tidak berfungsi karena ketiadaan dana dan lahan yang dapat dijadikan tempat tinggal para santri sehingga hanya mengandalkan tromol atau pergerakan dari Majlis ta’lim.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                                <h4>2012</h4>
+                                <h4 class="subheading">Pembangunan</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Akhir tahun 2012 dengan izin orang tua kami Bpk. H. Muhtar, maka kami membangun kantor sekretariat dan asrama putri di atas lahan seluas 120 meter persegi ditempat terpisah dengan asrama putra, langkah itu diambil mengingat lahan disekitar itu masih luas dengan harapan dapat dimiliki oleh yayasan dikemudian hari.</p></div>
                         </div>
                     </li>
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>December 2015</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
+                                <h4>2013</h4>
+                                <h4 class="subheading">Penerimaan Santri</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Dan pada awal tahun 2013 yayasan memberikan kesemptan kepada anak asuhnya baik yatim piatu maupun dhuafa untuk muqim ( tinggal di asrama ). Program ini disambut baik oleh para santri dan masyarakat sekitar sehingga peminat melebihi dari kapasitas daya tampung yang ada.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>July 2020</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
+                                <h4>Juni 2013</h4>
+                                <h4 class="subheading">Madrasah Tsanawiyah</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Selanjutnya kami menggulirkan program dalam rangka mewujudkan Gedung Asrama dan Gedung pendidikan tingkat MADRASAH TSANAWIYAH DAN SERTA SARANA DAN PRASARANA yang permanen dan dapat menampung seluruh santri Pondok Pesantren Yatim Al – Hanif ini.</p></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/5.jpg" alt="..." /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>Juni 2015</h4>
+                                <h4 class="subheading">Madrasah Aliyah</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">Setelah kami selesai Membangun sekolah untuk Madrasah Tsanawiyah, Kami kembali menggulirkan program PEMBANGUNAN GEDUNG ASRAMA PUTRA DAN GEDUNG PENDIDIKAN TINGKAT MADRASAH ALIYAH. Yang berfungsi untuk pendidikan dan asrama baik putra maupun putri.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -306,67 +316,93 @@
             </div>
         </div>
         <!-- Contact-->
-        <section class="page-section" id="contact">
+        <section class="page-section footer-pondok" id="contact">
             <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- * * SB Forms Contact Form * *-->
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- This form is pre-integrated with SB Forms.-->
-                <!-- To make this form functional, sign up at-->
-                <!-- https://startbootstrap.com/solution/contact-forms-->
-                <!-- to get an API token!-->
-                <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                    <div class="row align-items-stretch mb-5">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <!-- Name input-->
-                                <input class="form-control" id="name" type="text" placeholder="Your Name *" data-sb-validations="required" />
-                                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
-                            </div>
-                            <div class="form-group">
-                                <!-- Email address input-->
-                                <input class="form-control" id="email" type="email" placeholder="Your Email *" data-sb-validations="required,email" />
-                                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-                            </div>
-                            <div class="form-group mb-md-0">
-                                <!-- Phone number input-->
-                                <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" data-sb-validations="required" />
-                                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group form-group-textarea mb-md-0">
-                                <!-- Message input-->
-                                <textarea class="form-control" id="message" placeholder="Your Message *" data-sb-validations="required"></textarea>
-                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Submit success message-->
-                    <!---->
-                    <!-- This is what your users will see when the form-->
-                    <!-- has successfully submitted-->
-                    <div class="d-none" id="submitSuccessMessage">
-                        <div class="text-center text-white mb-3">
-                            <div class="fw-bolder">Form submission successful!</div>
-                            To activate this form, sign up at
-                            <br />
-                            <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                        </div>
-                    </div>
-                    <!-- Submit error message-->
-                    <!---->
-                    <!-- This is what your users will see when there is-->
-                    <!-- an error submitting the form-->
-                    <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
-                    <!-- Submit Button-->
-                    <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Send Message</button></div>
-                </form>
+                <div class="text-center mb-5">
+                    <h2 class="section-heading text-uppercase footer-title">
+                        Informasi Kami
+                    </h2>
+                <p class="footer-subtitle">
+                    Pusat Informasi & Kontak Resmi Pondok
+                </p>
+            </div>
+                <div class="row text-white">
+
+  <!-- PROFIL -->
+  <div class="col-lg-3 col-md-6 mb-4">
+    <img src="assets/img/logo-contact.jpg" class="footer-logo" alt="Logo Pondok">
+    <p class="small">
+      Pondok Pesantren Yatim Al-Hanif
+    </p>
+  </div>
+
+  <!-- MEDIA SOSIAL -->
+  <div class="col-lg-3 col-md-6 mb-4">
+    <h5 class="text-uppercase mb-3">Media Sosial</h5>
+    <ul class="list-unstyled">
+        <ul class="list-unstyled footer-social">
+  <li>
+    <a href="https://www.facebook.com/ustahmad.jazuli"
+       class="footer-link"
+       target="_blank">
+      <i class="fab fa-facebook-f me-2"></i> Facebook
+    </a>
+  </li>
+
+  <li>
+    <a href="https://www.instagram.com/ponpes_yatim_alhanif?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+       class="footer-link"
+       target="_blank">
+      <i class="fab fa-instagram me-2"></i> Instagram
+    </a>
+  </li>
+
+  <li>
+    <a href="https://www.youtube.com/@AhmadJazuli01"
+       class="footer-link"
+       target="_blank">
+      <i class="fab fa-youtube me-2"></i> YouTube
+    </a>
+  </li>
+
+  <li>
+    <a href="https://www.tiktok.com/@alhanif_.official?lang=id-ID"
+       class="footer-link"
+       target="_blank">
+      <i class="fab fa-tiktok me-2"></i> TikTok
+    </a>
+  </li>
+</ul>
+    </ul>
+  </div>
+
+  <!-- MENU -->
+  <div class="col-lg-3 col-md-6 mb-4">
+    <h5 class="text-uppercase mb-3">Informasi</h5>
+    <ul class="list-unstyled">
+      <li><a href="#pendaftaran" class="footer-link">Pendaftaran</a></li>
+      <li><a href="#program" class="footer-link">Program</a></li>
+      <li><a href="#team" class="footer-link">Struktur</a></li>
+      <li><a href="#contact" class="footer-link">Kontak</a></li>
+    </ul>
+  </div>
+
+  <!-- ALAMAT -->
+  <div class="col-lg-3 col-md-6 mb-4">
+    <h5 class="text-uppercase mb-3">Alamat</h5>
+    <p class="small">
+      Pondok Pesantren Yatim Al-Hanif<br>
+      Jl. Bukit Indah No.5, RT.03/RW.02, Serua, Kec. Ciputat, Kota Tangerang Selatan, Banten 15414<br><br>
+      <a href="https://wa.me/6285211560165"
+         class="footer-link wa-link"
+         target="_blank">
+        <i class="fab fa-whatsapp me-2"></i> 0852-1156-0165
+    </a>
+    </p>
+  </div>
+
+</div>
+
             </div>
         </section>
         <!-- Footer-->
