--- a/admin-psya-8f92.html
+++ b/admin-psya-8f92.html
@@ -62,7 +62,43 @@ if (sessionStorage.getItem("adminLogin") !== "true") {
       <div class="alert alert-warning mt-4">
       ⚠️ Data bersifat rahasia. Dilarang menyebarkan tanpa izin pimpinan pondok.
       </div>
+        <div class="row mb-4" id="dashboard">
+          <div class="col-md-3">
+            <div class="card shadow-sm text-center">
+              <div class="card-body">
+                <h6>Total Pendaftar</h6>
+                <h3 id="total">0</h3>
+              </div>
+            </div>
+          </div>
 
+          <div class="col-md-3">
+            <div class="card shadow-sm text-center">
+              <div class="card-body">
+                <h6>Tsanawiyah</h6>
+                <h3 id="mts">0</h3>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card shadow-sm text-center">
+              <div class="card-body">
+                <h6>Aliyah</h6>
+                <h3 id="ma">0</h3>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card shadow-sm text-center">
+              <div class="card-body">
+                <h6>Update Terakhir</h6>
+                <small id="last">-</small>
+              </div>
+            </div>
+          </div>
+        </div>
       <iframe
         src="https://docs.google.com/spreadsheets/d/1UQr8bh1XIxJSbH76HsjvLZDXUHIIcqLbXZR0NhcZjck/preview"
         width="100%" height="650">
@@ -84,6 +120,32 @@ function logout(){
   </small>
 </footer>
 
+      <script>
+      const sheetId = "1N7cf9RokOadpMwD65EBvUk0MyMS_ESryXUfOlfYyUOw";
+      const url = `https://opensheet.elk.sh/1UQr8bh1XIxJSbH76HsjvLZDXUHIIcqLbXZR0NhcZjck/Form Responses 1`;
 
+      fetch(url)
+        .then(res => res.json())
+        .then(data => {
+          document.getElementById("total").innerText = data.length;
+
+          let mts = 0, ma = 0;
+
+          data.forEach(row => {
+            const jenjang = row["Jenjang Pendidikan"]?.toLowerCase();
+
+            if(jenjang?.includes("tsanawiyah")) mts++;
+            if(jenjang?.includes("aliyah")) ma++;
+          });
+
+          document.getElementById("mts").innerText = mts;
+          document.getElementById("ma").innerText = ma;
+
+          if(data.length > 0){
+            document.getElementById("last").innerText =
+              data[data.length - 1]["Timestamp"];
+          }
+        });
+      </script>
 </body>
 </html>
